@@ -1,17 +1,16 @@
 package com.prgrms.coretime.common.jwt;
 
 import com.prgrms.coretime.common.jwt.claim.AccessClaim;
+import com.prgrms.coretime.common.util.JwtService;
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 import javax.servlet.FilterChain;
 import javax.servlet.ServletException;
-import javax.servlet.ServletRequest;
-import javax.servlet.ServletResponse;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import org.slf4j.Logger;
@@ -20,34 +19,30 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
-import org.springframework.web.filter.GenericFilterBean;
+import org.springframework.web.filter.OncePerRequestFilter;
 
-public class JwtAuthenticationFilter extends GenericFilterBean {
+public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
   private final Logger log = LoggerFactory.getLogger(getClass());
 
   private final String accessHeaderKey;
 
-  private final Jwt jwt;
+  private final JwtService jwtService;
 
-  public JwtAuthenticationFilter(String accessHeaderKey, Jwt jwt) {
+  public JwtAuthenticationFilter(String accessHeaderKey,
+      JwtService jwtService) {
     this.accessHeaderKey = accessHeaderKey;
-    this.jwt = jwt;
+    this.jwtService = jwtService;
   }
 
   @Override
-  public void doFilter(ServletRequest req, ServletResponse res, FilterChain chain)
-      throws IOException, ServletException {
-    HttpServletRequest request = (HttpServletRequest) req;
-    HttpServletResponse response = (HttpServletResponse) res;
-
+  protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response,
+      FilterChain chain) throws ServletException, IOException {
     if (SecurityContextHolder.getContext().getAuthentication() == null) {
       String token = getAccessToken(request);
       if (token != null) {
         try {
-          AccessClaim claims = jwt.verifyAccessToken(token);
-          log.debug("Jwt parse result: {}", claims);
-
+          AccessClaim claims = jwtService.verifyAccessToken(token);
           String nickname = claims.getNickname();
           String email = claims.getEmail();
           Long userId = claims.getUserId();
@@ -63,11 +58,11 @@ public class JwtAuthenticationFilter extends GenericFilterBean {
             SecurityContextHolder.getContext().setAuthentication(authentication);
           }
         } catch (Exception e) {
-          log.warn("Jwt processing failed: {}", e.getMessage());
+          log.warn("Jwt 처리 실패: {}", e.getMessage());
         }
       }
     } else {
-      log.debug("SecurityContextHolder not populated with security token, as it already contained: '{}'", SecurityContextHolder.getContext().getAuthentication());
+      log.debug("SecurityContextHolder는 이미 authentication 객체를 가지고 있습니다.: '{}'", SecurityContextHolder.getContext().getAuthentication());
     }
 
     chain.doFilter(request, response);
@@ -77,11 +72,7 @@ public class JwtAuthenticationFilter extends GenericFilterBean {
     String token = request.getHeader(accessHeaderKey);
     if(token != null && !token.trim().equals("")) {
       log.debug("Jwt authorization api detected: {}", token);
-      try {
-        return URLDecoder.decode(token, "UTF-8");
-      } catch (UnsupportedEncodingException e) {
-        log.error(e.getMessage(), e);
-      }
+      return URLDecoder.decode(token, StandardCharsets.UTF_8);
     }
     return null;
   }
